// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnHeader snapshots should render ColumnHeader 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumn__labels SectionColumn__labels--light"
      data-test-box=""
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="css-1r00qlg"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumn__content SectionColumn__content--light SectionColumn__content--single SectionColumn__content--single--light"
        data-test-box=""
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-1jnxvbp Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          Frame
        </small>
        <div
          class="css-2ro7w4 SectionColumn__inputConnector SectionColumn__inputConnector--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral3 Icon--neutral3--light"
            data-test-icon="inputs-connector"
            height="24"
            name="InputsConnector"
            width="24"
          />
        </div>
      </div>
      <div
        class="css-c1qms7"
        data-test-box=""
      >
        <div
          class="css-1jnxvbp ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="html-tag"
            height="14"
            name="HtmlTag"
            width="14"
          />
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Toggle ready for dev status
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="component"
            height="14"
            name="Component"
            width="14"
          />
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Create component
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnHeader snapshots should render with multiple selects 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumn__labels SectionColumn__labels--light"
      data-test-box=""
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="css-1r00qlg"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumn__content SectionColumn__content--light SectionColumn__content--single SectionColumn__content--single--light"
        data-test-box=""
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-1jnxvbp Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          2 selected
        </small>
        <div
          class="css-2ro7w4 SectionColumn__inputConnector SectionColumn__inputConnector--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral3 Icon--neutral3--light"
            data-test-icon="inputs-connector"
            height="24"
            name="InputsConnector"
            width="24"
          />
        </div>
      </div>
      <div
        class="css-c1qms7"
        data-test-box=""
      >
        <div
          class="css-1jnxvbp ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="html-tag"
            height="14"
            name="HtmlTag"
            width="14"
          />
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Toggle ready for dev status
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="component"
            height="14"
            name="Component"
            width="14"
          />
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Create component
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
